@@ -3,6 +3,7 @@ from twisted.application import service, internet
 
 from txjsonrpc.web import jsonrpc
 
+
 class Example(jsonrpc.JSONRPC):
     """
     An example object to be published.
@@ -14,6 +15,7 @@ class Example(jsonrpc.JSONRPC):
         """Return all passed args."""
         return x
 
+
 class Math(jsonrpc.JSONRPC):
     """
     An example subhandler.
@@ -21,6 +23,7 @@ class Math(jsonrpc.JSONRPC):
     def jsonrpc_add(self, a, b):
         """Return sum of arguments."""
         return a + b
+
 
 application = service.Application("Example JSON-RPC Server")
 root = Example()
